--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "yup": "^1.7.1"
   },
   "devDependencies": {
+    "@types/node": "^25.0.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
