--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.4",
     "build": "^0.1.4",
     "formik": "^2.4.6",
+    "lucide-react": "^0.563.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.9.0",
     "react-dom": "^19.0.0",
